fix: Adjust video overflow for mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,19 +234,19 @@ body {
     background-color: #000000;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
     padding: 80px 40px;
 }
 
 iframe {
     /* border: 2px solid red; */
-    width: 500px;
+    width: 300px;
     height: 500px;
 }
 
 .video {
-    width: 500px; 
-    height: 300px; 
+    width: 100%; 
+    height: 200px; 
     overflow: hidden; 
     position: relative;
 }
@@ -437,6 +437,11 @@ iframe {
         margin-top: 30px;
         padding-bottom: 20px;
         font-size: 2.5rem
+    }
+
+    .video {
+        width: 500px;
+        height: 300px;
     }
 }
 
